添加审计日志

--- a/src/VehicleApp.HttpApi.Host/appsettings.json
+++ b/src/VehicleApp.HttpApi.Host/appsettings.json
@@ -1,24 +1,33 @@
 {
     "App": {
-        "SelfUrl": "https://localhost:44330",
         "AngularUrl": "http://localhost:4200",
         "CorsOrigins": "http://localhost:5666,http://localhost:8996",
-        "RedirectAllowedUrls": "http://localhost:4200",
         "DisablePII": false,
+        "FileServerUrl": "http://localhost:44334/",
         "HealthCheckUrl": "/health-status",
-        "FileServerUrl": "http://localhost:44334/"
-    },
-    "ConnectionStrings": {
-        "Default": "Server=.;Database=VehicleApp;Trusted_Connection=True;TrustServerCertificate=true"
+        "RedirectAllowedUrls": "http://localhost:4200",
+        "SelfUrl": "https://localhost:44330"
     },
     "AuthServer": {
         "Authority": "https://localhost:44330",
-        //是否必须用HTTPS？
         "RequireHttpsMetadata": true,
         "SwaggerClientId": "VehicleApp_Swagger",
         "CertificatePassPhrase": "41210577-fe52-4b18-8b44-889010870579"
     },
+    "ConnectionStrings": {
+        "Default": "Server=.;Database=VehicleApp;Trusted_Connection=True;TrustServerCertificate=true"
+    },
+    //"Settings": {
+    //    "Abp.Mailing.DefaultFromAddress": "1957993455@qq.com",
+    //    "Abp.Mailing.DefaultFromDisplayName": "VehicleApp",
+    //    "Abp.Mailing.Smtp.EnableSsl": "true",
+    //    "Abp.Mailing.Smtp.Host": "smtp.qq.com",
+    //    "Abp.Mailing.Smtp.Password": "rdcxerzbgwmjhjhf",
+    //    "Abp.Mailing.Smtp.Port": "465",
+    //    "Abp.Mailing.Smtp.UseDefaultCredentials": "false",
+    //    "Abp.Mailing.Smtp.UserName": "1957993455@qq.com"
+    //},
     "StringEncryption": {
-        "DefaultPassPhrase": "bhaLwp1noWEFd88z"
+        "DefaultPassPhrase": "kAq/od+4iPIVspjDa7emTA=="
     }
 }
