--- a/src/VehicleApp.Application/VehicleApp.Application.csproj
+++ b/src/VehicleApp.Application/VehicleApp.Application.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="9.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="AuditLogging\" />
+  </ItemGroup>
+
 </Project>
