--- a/src/VehicleApp.DbMigrator/appsettings.json
+++ b/src/VehicleApp.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "Default": "Server=.;Database=VehicleApp;Trusted_Connection=True;TrustServerCertificate=true"
+        "Default": "Server=.;Database=VehicleApp1;Trusted_Connection=True;TrustServerCertificate=true"
     },
     "OpenIddict": {
         "Applications": {
