--- a/src/VehicleApp.Domain/VehicleApp.Domain.csproj
+++ b/src/VehicleApp.Domain/VehicleApp.Domain.csproj
@@ -15,12 +15,14 @@
   <ItemGroup>
     <PackageReference Include="Volo.Abp.Emailing" Version="9.0.5" />
     <PackageReference Include="Volo.Abp.Caching" Version="9.0.5" />
+    <PackageReference Include="Volo.Abp.MailKit" Version="9.0.5" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="9.0.5" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.OpenIddict" Version="9.0.5" />
     <PackageReference Include="Volo.Abp.BackgroundJobs.Domain" Version="9.0.5" />
     <PackageReference Include="Volo.Abp.AuditLogging.Domain" Version="9.0.5" />
     <PackageReference Include="Volo.Abp.FeatureManagement.Domain" Version="9.0.5" />
     <PackageReference Include="Volo.Abp.SettingManagement.Domain" Version="9.0.5" />
+    <PackageReference Include="Volo.Abp.Sms.Aliyun" Version="9.0.5" />
     <!--<PackageReference Include="Volo.Abp.BlobStoring.Database.Domain" Version="9.0.4" />-->
   </ItemGroup>
 
